--- a/src/Ext.Net.Examples.csproj
+++ b/src/Ext.Net.Examples.csproj
@@ -1101,8 +1101,8 @@
     <Content Include="Examples\TabPanel\Basic\TabBar_Config\config.xml" />
     <Content Include="Examples\TabPanel\Basic\TabBar_Config\Default.aspx" />
     <Content Include="Examples\TabPanel\Basic\TabBar_Config\ElementChooser.ascx" />
-    <Content Include="Examples\TabPanel\GroupTabPanel\Overview\StockPortlet.ascx" />
-    <Content Include="Examples\TabPanel\GroupTabPanel\Overview\Tickets.ascx" />
+    <Content Include="Examples\TabPanel\_GroupTabPanel\Overview\StockPortlet.ascx" />
+    <Content Include="Examples\TabPanel\_GroupTabPanel\Overview\Tickets.ascx" />
     <Content Include="Examples\Toolbar\config.xml" />
     <Content Include="Examples\Toolbar\Menu\Context_Menu\config.xml" />
     <Content Include="Examples\Toolbar\Menu\Context_Menu\Default.aspx" />
@@ -2083,8 +2083,8 @@
     <Content Include="Examples\TabPanel\Basic\TabMenu\config.xml" />
     <Content Include="Examples\TabPanel\Basic\TabMenu\Default.aspx" />
     <Content Include="Examples\TabPanel\config.xml" />
-    <Content Include="Examples\TabPanel\GroupTabPanel\Overview\config.xml" />
-    <Content Include="Examples\TabPanel\GroupTabPanel\Overview\Default.aspx" />
+    <Content Include="Examples\TabPanel\_GroupTabPanel\Overview\config.xml" />
+    <Content Include="Examples\TabPanel\_GroupTabPanel\Overview\Default.aspx" />
     <Content Include="Examples\TabPanel\TabStrip\Overview\config.xml" />
     <Content Include="Examples\TabPanel\TabStrip\Overview\Default.aspx" />
     <Content Include="Examples\TreePanel\Advanced\Remote_Mode_with_Service\config.xml" />
