Fixes project file and sets up Ext.NET 3.2.1 NuGet package.

--- a/src/Web.config
+++ b/src/Web.config
@@ -69,6 +69,14 @@
     <httpModules>
       <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
     </httpModules>
+    --><!-- This httpHandlers config only required if using IIS6 (or lower) --><!--
+    <httpHandlers>
+      <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler" validate="false" />
+    </httpHandlers>
+    --><!-- This httpModules config only required if using IIS6 (or lower) --><!--
+    <httpModules>
+      <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
+    </httpModules>
     --><pages controlRenderingCompatibilityVersion="4.0" clientIDMode="AutoID">
       <controls>
         <add tagPrefix="src" src="~/HighLighter/HighLighterButton.ascx" tagName="SourceButton" />
@@ -77,7 +85,7 @@
     <namespaces>
         <add namespace="Ext.Net" />
         <!--<add namespace="Ext.Net.MVC"/>-->
-      </namespaces></pages>
+      <!--<add namespace="Ext.Net.MVC"/>--></namespaces></pages>
     <httpModules>
       <add name="AnalyticsModule" type="Ext.Net.Examples.AnalyticsModule, Ext.Net.Examples" />
       <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
