--- a/src/Ext.Net.Examples.csproj
+++ b/src/Ext.Net.Examples.csproj
@@ -55,9 +55,8 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Ext.Net, Version=3.2.1.19974, Culture=neutral, PublicKeyToken=2e12ce3d0176cd87, processorArchitecture=MSIL">
+    <Reference Include="Ext.Net">
       <HintPath>..\packages\Ext.NET.3.2.1\lib\net45\Ext.Net.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="Ext.Net.Utilities, Version=2.5.0.0, Culture=neutral, PublicKeyToken=2c34ac34702a3c23, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -343,6 +342,7 @@
     <Content Include="App_Readme\Ext.NET\BREAKING_CHANGES.txt" />
     <Content Include="App_Readme\Ext.NET\CHANGELOG.txt" />
     <Content Include="App_Readme\Ext.NET\Ext.NET.Default.aspx" />
+    <Content Include="App_Readme\Ext.NET\LICENSE.txt" />
     <Content Include="App_Readme\Ext.NET\README.txt" />
     <Content Include="App_Readme\Transformer.NET.README.txt" />
     <Content Include="App_Readme\Transformer.NET\LICENSE.txt" />
@@ -2431,8 +2431,6 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <PropertyGroup>
