--- a/src/Ext.Net.Examples.csproj
+++ b/src/Ext.Net.Examples.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Ext.Net">
+      <HintPath>..\packages\Ext.NET.3.3.0\lib\net45\Ext.Net.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.85.5.452, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -133,9 +136,6 @@
     <Reference Include="Wilco.SyntaxHighlighter, Version=0.5.0.0, Culture=neutral, PublicKeyToken=fb87150479c2990b, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup Condition=" ('$(Configuration)|$(Platform)' == 'Release NuGet|AnyCPU') Or ('$(Configuration)|$(Platform)' == 'Debug NuGet|AnyCPU')">
-    <Reference Include="Ext.Net">
-      <HintPath>..\packages\Ext.NET.3.2.1\lib\net45\Ext.Net.dll</HintPath>
-    </Reference>
     <Reference Include="Ext.Net.Utilities, Version=2.5.0.0, Culture=neutral, PublicKeyToken=2c34ac34702a3c23, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Ext.NET.Utilities.2.5.0\lib\Ext.Net.Utilities.dll</HintPath>
@@ -166,7 +166,8 @@
   </ItemGroup>
   <ItemGroup Condition=" ('$(Configuration)|$(Platform)' == 'Release|AnyCPU') Or ('$(Configuration)|$(Platform)' == 'Debug|AnyCPU')">
     <Reference Include="Ext.Net">
-      <HintPath>..\..\Premium\src\bin\$(Configuration)\Ext.Net.dll</HintPath>
+      <HintPath>..\packages\Ext.NET.3.3.0\lib\net45\Ext.Net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Ext.Net.Utilities">
       <SpecificVersion>False</SpecificVersion>
@@ -392,11 +393,7 @@
     <Content Include="App_Readme\Ext.NET.Utilities\BREAKING_CHANGES.txt" />
     <Content Include="App_Readme\Ext.NET.Utilities\LICENSE.txt" />
     <Content Include="App_Readme\Ext.NET.Utilities\README.txt" />
-    <Content Include="App_Readme\Ext.NET\BREAKING_CHANGES.txt" />
-    <Content Include="App_Readme\Ext.NET\CHANGELOG.txt" />
     <Content Include="App_Readme\Ext.NET\Ext.NET.Default.aspx" />
-    <Content Include="App_Readme\Ext.NET\LICENSE.txt" />
-    <Content Include="App_Readme\Ext.NET\README.txt" />
     <Content Include="App_Readme\Transformer.NET.README.txt" />
     <Content Include="App_Readme\Transformer.NET\LICENSE.txt" />
     <Content Include="App_Readme\Transformer.NET\README.txt" />
@@ -457,6 +454,9 @@
     <Content Include="Examples\Chart\Combination\Pareto\Default.aspx" />
     <Content Include="Examples\Chart\Line\CrossZoom\config.xml" />
     <Content Include="Examples\Chart\Line\CrossZoom\Default.aspx" />
+    <Content Include="App_Readme\Ext.NET\README.md" />
+    <Content Include="App_Readme\Ext.NET\LICENSE" />
+    <Content Include="App_Readme\Ext.NET\CHANGELOG.md" />
     <None Include="Examples\Chart\Line\CrossZoom\usd2eur.json" />
     <Content Include="Examples\Chart\Line\Image_Markers\circle.png" />
     <Content Include="Examples\Chart\Line\Image_Markers\pentagon.png" />
@@ -1270,7 +1270,6 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Readme\Ext.NET\Sample.Web.config" />
     <None Include="Code\Northwind\Northwind.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>Northwind.designer.cs</LastGenOutput>
