--- a/src/Web.config
+++ b/src/Web.config
@@ -50,6 +50,7 @@
         <add tagPrefix="src" src="~/HighLighter/HighLighterButton.ascx" tagName="SourceButton" />
         <add assembly="Ext.Net" namespace="Ext.Net" tagPrefix="ext" />
       </controls>
+      
       <namespaces>
         <add namespace="Ext.Net" />
         <!--<add namespace="Ext.Net.MVC"/>-->
@@ -105,6 +106,7 @@
   
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
@@ -115,8 +117,9 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Transformer.NET" publicKeyToken="e274d618e7c603a7" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.0" newVersion="2.1.1" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.1" newVersion="2.1.1" />
       </dependentAssembly>
+      
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
@@ -141,6 +144,14 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+ </configuration>
