Creates WebForms examples for Ext.Net.Toast.
Created two Toast examples:
1. Simple overview of toast.
2. A form that allows to configure some options of the toast and
   and display it from server-side feedback.

Related issue is extnet/Ext.NET#1414.

--- a/src/Ext.Net.Examples.csproj
+++ b/src/Ext.Net.Examples.csproj
@@ -821,6 +821,10 @@
     <Content Include="Examples\TreePanel\Advanced\Locking_Buffer_Rendered_TreeGrid\Default.aspx" />
     <Content Include="Examples\TreePanel\Basic\Custom_Drop_Logic\config.xml" />
     <Content Include="Examples\TreePanel\Basic\Custom_Drop_Logic\Default.aspx" />
+    <Content Include="Examples\Window\Toast\Overview\config.xml" />
+    <Content Include="Examples\Window\Toast\Overview\Default.aspx" />
+    <Content Include="Examples\Window\Toast\Playground\config.xml" />
+    <Content Include="Examples\Window\Toast\Playground\Default.aspx" />
     <Content Include="Examples\XRender\UserControl\Lazy_Load\config.xml" />
     <Content Include="Examples\XRender\UserControl\Lazy_Load\Default.aspx" />
     <Content Include="Examples\XRender\UserControl\Lazy_Load\RegionUserControl.ascx" />
