Updates publish descriptor file to add slack icon/nick.
The default icon and nickname were not really meaningful.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,8 @@ jobs:
         ftp-pass: ${{ secrets.iis_ftp_pass }}
         ftp-root: examples.ext.net/wwwroot
         slack-webhook:  ${{ secrets.SLACK_WEBHOOK }}
+        slack-nick: "Examples Explorer Deploy Service"
+        slack-icon: ":ext:"
 
     - name: Deploy Examples Explorer to https://examples5.ext.net/
       uses: objectdotnet/action-ftp-deploy-then-slack-notification@0.2.0
@@ -31,3 +33,5 @@ jobs:
         ftp-pass: ${{ secrets.iis_ftp_pass }}
         ftp-root: examples5.ext.net/wwwroot
         slack-webhook:  ${{ secrets.SLACK_WEBHOOK }}
+        slack-nick: "Examples Explorer Deploy Service"
+        slack-icon: ":ext:"
