Improves action name so Slack output could be bold.
The trailing slash causes the 'bold' formatting to be ignored in its
markdown slack formatted message.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: "Deploy Examples Explorer v4 to https://examples4.ext.net/"
+name: "Deploy Examples Explorer v4 (https://examples4.ext.net/)"
 
 on:
   push:
