--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         ftp-host: ${{ secrets.iis_ftp_host }}
         ftp-user: ${{ secrets.iis_ftp_user }}
         ftp-pass: ${{ secrets.iis_ftp_pass }}
-        ftp-root: examples5.ext.net/wwwroot
+        ftp-root: examples5.ext.net
         slack-webhook:  ${{ secrets.SLACK_WEBHOOK }}
         slack-nick: "Examples Explorer Deploy Service"
         slack-icon: ":extglow:"
